@@ -1,6 +1,8 @@
 Revision history for Perl extension AnyEvent.
 
 	- added a a regex read type to AnyEvent::Handle.
+        - always croak in on_error in AnyEvent::Handle.
+        - document how to subclass AnyEvent::Handle.
 
 4.05 Mon May 26 19:44:06 CEST 2008
         - some platforms ignore the rfc and prepend an extra sa_len member to
